--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer Dinámico</title>
+</head>
+<body>
+    <footer style="background-color: #f8f9fa; padding: 20px; text-align: center;">
+        <p>&copy; <span id="currentYear"></span> - Mi Empresa. Todos los derechos reservados.</p>
+    </footer>
 
-    <p>&copy; 2024 - Mi Empresa. Todos los derechos reservados.</p>
-
+    <script>
+        document.getElementById('currentYear').textContent = new Date().getFullYear();
+    </script>
+</body>
+</html>
