--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Footer Dinámico</title>
 </head>
 <body>
-    <footer style="background-color: #f8f9fa; padding: 20px; text-align: center;">
+    <footer class="footer bg-azul col-md-12">
         <p>&copy; <span id="currentYear"></span> - Mi Empresa. Todos los derechos reservados.</p>
     </footer>
 
