--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer Dinámico</title>
+    <style>
+        .bg-azul {
+            background-color: #003A78; /* Agregar el punto para indicar que es una clase */
+            color: white; /* Puedes agregar color de texto para mejor legibilidad */
+            padding: 20px; /* Espaciado interno */
+            text-align: center; /* Alinear texto al centro */
+        }
+    </style>
 </head>
 <body>
     <footer class="footer bg-azul col-md-12">
-        <p>&copy; <span id="currentYear"></span> - Mi Empresa. Todos los derechos reservados.</p>
+        <p>&copy; <span id="currentYear"></span> - Universidad Americana</p>
     </footer>
 
     <script>
