--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <footer class="footer bg-azul col-md-12">
-        <p>&copy; <span id="currentYear"></span> - Universidad Americana</p>
+        <p>&copy; <span id="currentYear"></span> - Universidad Americana - By Chiki Footer uwu</p>
     </footer>
 
     <script>
