--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <footer class="footer bg-azul col-md-12">
+    <footer class="footer bg-azul col-md-12" scrolling="no">
         <p>&copy; <span id="currentYear"></span> - Universidad Americana - By Chiki Footer uwu</p>
     </footer>
 
