--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ text-align: center; /* Alinear texto al centro */
 </head>
 <body>
 <footer class="footer bg-azul col-md-12" scrolling="no">
-<p>&copy; <span id="currentYear"></span> - Universidad Americana - By Chiki Footer uwu</p>
+<p>&copy; <span id="currentYear"></span> - Universidad Americana - By Chiki18</p>
 </footer>
 
     <script>
