--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ text-align: center; /* Alinear texto al centro */
 <script>
     function updateYear() {
         const currentYear = new Date().getFullYear();
+        console.log("Año actual:", currentYear); // Mostrar el año en la consola
         document.getElementById('currentYear').textContent = currentYear;
     }
     
