--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
             text-align: center;
             /* Alinear texto al centro */
         }
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
     </style>
 </head>
 
