--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         .footer-image {
             max-width: 200px; /* Ajuste de tamaño flexible */
             height: auto;
+            padding-top: 10px;
         }
 
         .footer-content {
